[gd_scene load_steps=5 format=3 uid="uid://dlwaiybjqakk1"]

[ext_resource type="Script" uid="uid://b3il3lcwtmdd0" path="res://scripts/bullet/bullet_000_base.gd" id="1_stuyg"]
[ext_resource type="Texture2D" uid="uid://c54er6fxpmcc8" path="res://assets/image/projectile/pea_shadows.png" id="2_ouobi"]
[ext_resource type="Script" uid="uid://bhu6sjkijn82b" path="res://scripts/fx/bullet_effect/bullet_effect_000_base.gd" id="3_di87y"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hl11l"]

[node name="Bullet000Base" type="Node2D"]
script = ExtResource("1_stuyg")

[node name="BulletShadow" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(0, 50)
texture = ExtResource("2_ouobi")
hframes = 2

[node name="Body" type="Node2D" parent="."]

[node name="BulletBody" type="Sprite2D" parent="Body"]

[node name="BulletEffect" type="Node2D" parent="."]
visible = false
script = ExtResource("3_di87y")

[node name="AllParticles2D" type="Node2D" parent="BulletEffect"]

[node name="Area2DAttack" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DAttack"]
shape = SubResource("CircleShape2D_hl11l")

[connection signal="area_entered" from="Area2DAttack" to="." method="_on_area_2d_attack_area_entered"]
